# fima

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
fima/: Bonds.py  Codal.py  Funds.py  IFB.py  IME.py  Options.py  TSEInstitutes.py  TSEInstitutions.py  TSETMC.py  __init__.py
test/: TestBonds.py  TestIFB.py  TestIME.py  TestOptions.py  TestTSEInstitutions.py  TestTSETMC.py
