[project]
name = "fima"
version = "0.2.0"
description = "fima – A Python package for scraping and analyzing Iran’s financial market data."
authors = [{ name = "Hemo Boghosian", email = "HemoBoghosian@gmail.com" }]
license = { text = "MIT" }
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
dependencies = ["pandas", "requests", "jdatetime", "numpy", "scipy", "bs4", "selenium", "mibian", "lxml"]

[project.urls]
"Homepage" = "https://github.com/hemoboghosian/fima"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
